objects/Scheduler_Optimizer__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Use these custom setting to run the Scheduler in minutes</description>
    <fields>
        <fullName>On_Off_Switch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Switch for scheduler weather to run with optimize code</description>
        <label>On/Off Switch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scheduler_Job_Name__c</fullName>
        <description>Scheduler Job Name by which you want it to schedule.</description>
        <label>Scheduler Job Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_in_Minutes_0_59__c</fullName>
        <description>Time in Minutes to schedule the job.</description>
        <label>Time in Minutes(0-59)</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Scheduler Optimizer</label>
</CustomObject>